--- a/src/main/webapp/resources/style/main.css
+++ b/src/main/webapp/resources/style/main.css
@@ -1,3 +1,18 @@
+/* Initial page layout */
+#playStuff {
+    height: 120px;
+    width: 80%;
+    margin: 0 auto; 
+    background-color: blue;
+    margin-bottom: 10px;
+}
+#pageWrapper {
+    height: 120px;
+    width: 80%;
+    margin: 0 auto; 
+    background-color: lightblue;
+}
+/* shit that gets generated */
 #tab {
   width: 1600px;
   height: 300px;
