--- a/src/main/webapp/resources/style/main.css
+++ b/src/main/webapp/resources/style/main.css
@@ -6,6 +6,7 @@
     background-color: blue;
     margin-bottom: 10px;
 }
+
 #pageWrapper {
     height: 120px;
     width: 80%;
@@ -13,46 +14,61 @@
     background-color: lightblue;
 }
 /* shit that gets generated */
-#tab {
-  width: 1600px;
-  height: 300px;
-  background-color: white;
-  padding: 10px;
+.songPart {
+    width: 800px;
+    height: 120px;
+    float: left;
+    background-color: white;
 }
-.part {
-  width: 800px;
-  height: 80px;
-  float: left;
-  background-color: white;
+
+.bpmDisplay {
+    width: 100px;
+    text-align: center;
+    height: 20px;
+    background-color: white;
 }
-.table-part {
-  cellspacing: 0px;
-  width: 100%;
-  height: 100%;
-  border-left: 1px solid black;
-  border-right: 1px solid black;
-  table-layout: fixed;
+
+.actualPartWrapper {
+    width:100%;
+    height: 100px;
+    background-color: white;
+    vertical-align: middle;
+    text-align: center;
+    border-left: 2px solid black;
+    border-right: 2px solid black;
 }
-td {
-  text-align: center;
-  height: 20px;
-  padding: 0px;
+
+.notesContainer {
+    height: 80px;
+    width: 100%;
+    background-color: white;
+    display: table;
 }
-.empty-note {
-  float: left;
-  width: 100%;
-  height: 1px;
-  background-color: black;
+
+.row {
+    display:table-row;
 }
-.filled-note {
-  float: left;
-  width: 50%;
-  text-align: center;
+
+.column {
+    height: 20px;
+    text-align: center;
+    position: relative;
+    float: left;
 }
-.note-border {
-  margin-top: 8px;
-  float: left;
-  width: 25%;
-  height: 1px;
-  background-color: black;
+
+.column:before {
+    content:"";
+    position: absolute;
+    z-index: 1;
+    left: 0;
+    top: 50%;
+    width: 100%;
+    border: 1px solid black;
+}
+
+.note {
+    background-color: white;
+    width: 20px;
+    margin: 0 auto;
+    z-index: 2;
 }
