--- a/src/main/webapp/resources/style/main.css
+++ b/src/main/webapp/resources/style/main.css
@@ -1,17 +1,37 @@
 /* Initial page layout */
 #playStuff {
-    height: 120px;
-    width: 80%;
+    height: 50px;
+    width: 30%;
     margin: 0 auto; 
-    background-color: blue;
+    background-color: white;
     margin-bottom: 10px;
+    border: 2px solid black;
+    border-radius: 25px;
+    text-align: center;
+    vertical-align: middle;
 }
 
 #pageWrapper {
-    height: 120px;
-    width: 80%;
+    display: flex;
+    flex-direction: column;
+    min-height: 15vh;
+    width: 805px;
     margin: 0 auto; 
-    background-color: lightblue;
+    border-radius: 25px;
+    background-color: white;
+    padding: 20px;
+    border: 2px solid black;
+}
+
+#slider {
+    position: absolute;
+    height: 100px;
+    width: 3px;
+    background-color: red;
+    position: absolute;
+    left: -100px;
+    top: -100px;
+    z-index: 100;
 }
 /* shit that gets generated */
 .songPart {
@@ -25,13 +45,11 @@
     width: 100px;
     text-align: center;
     height: 20px;
-    background-color: white;
 }
 
 .actualPartWrapper {
     width:100%;
     height: 100px;
-    background-color: white;
     vertical-align: middle;
     text-align: center;
     border-left: 2px solid black;
@@ -43,6 +61,7 @@
     width: 100%;
     background-color: white;
     display: table;
+    padding-top: 8px;
 }
 
 .row {
@@ -67,8 +86,10 @@
 }
 
 .note {
+    position: relative;
     background-color: white;
     width: 20px;
     margin: 0 auto;
     z-index: 2;
+    margin-top: 2px;
 }
